--- a/swagger-ui/css/screen.css
+++ b/swagger-ui/css/screen.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 */
 html,
 body,
@@ -86,6 +87,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -125,14 +127,12 @@ table {
 }
 .swagger-ui-wrap {
   line-height: 1;
-  font-family: "Droid Sans", sans-serif;
-  max-width: 960px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
 .swagger-ui-wrap b,
 .swagger-ui-wrap strong {
-  font-family: "Droid Sans", sans-serif;
   font-weight: bold;
 }
 .swagger-ui-wrap q,
@@ -247,7 +247,6 @@ table {
   display: block;
 }
 .swagger-ui-wrap pre {
-  font-family: "Anonymous Pro", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier New", monospace;
   background-color: #fcf6db;
   border: 1px solid #e5e0c6;
   padding: 10px;
@@ -327,7 +326,6 @@ table {
   width: 100%;
 }
 .swagger-ui-wrap .model-signature {
-  font-family: "Droid Sans", sans-serif;
   font-size: 1em;
   line-height: 1.5em;
 }
@@ -407,7 +405,6 @@ table {
 }
 .swagger-ui-wrap .markdown p code,
 .swagger-ui-wrap .markdown li code {
-  font-family: "Anonymous Pro", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier New", monospace;
   background-color: #f0f0f0;
   color: black;
   padding: 1px 3px;
@@ -424,7 +421,6 @@ table {
   font-size: 1.5em;
   line-height: 1.3em;
   padding: 10px 0 10px 0;
-  font-family: "Droid Sans", sans-serif;
   font-weight: bold;
 }
 .swagger-ui-wrap .heading_with_menu {
@@ -472,11 +468,7 @@ table {
   font-weight: normal;
   vertical-align: middle;
 }
-.swagger-ui-wrap .code {
-  font-family: "Anonymous Pro", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier New", monospace;
-}
 .swagger-ui-wrap form.formtastic fieldset.inputs ol li.text textarea {
-  font-family: "Droid Sans", sans-serif;
   height: 250px;
   padding: 4px;
   display: block;
@@ -541,7 +533,6 @@ table {
   color: #666666;
 }
 .swagger-ui-wrap .markdown pre {
-  font-family: "Anonymous Pro", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier New", monospace;
   background-color: #fcf6db;
   border: 1px solid #e5e0c6;
   padding: 10px;
@@ -554,7 +545,6 @@ table {
   margin: 20px 0 25px 0 !important;
 }
 .swagger-ui-wrap ul#resources {
-  font-family: "Droid Sans", sans-serif;
   font-size: 0.9em;
 }
 .swagger-ui-wrap ul#resources li.resource {
@@ -627,7 +617,6 @@ table {
   display: block;
   clear: none;
   float: left;
-  font-family: "Droid Sans", sans-serif;
   font-weight: bold;
 }
 .swagger-ui-wrap ul#resources li.resource div.heading h2 a {
@@ -759,7 +748,6 @@ table {
   outline-color: #cc0000;
 }
 .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation div.content div.response div.block pre {
-  font-family: "Anonymous Pro", "Menlo", "Consolas", "Bitstream Vera Sans Mono", "Courier New", monospace;
   padding: 10px;
   font-size: 0.9em;
   max-height: 400px;
@@ -960,7 +948,6 @@ table {
   padding: 10px 0;
   font-size: 0.8em;
   border-top: 1px solid #dddddd;
-  font-family: "Droid Sans", sans-serif;
   color: #999999;
   font-style: italic;
 }
@@ -975,7 +962,6 @@ table {
 }
 .swagger-ui-wrap .markdown ol,
 .swagger-ui-wrap .markdown ul {
-  font-family: "Droid Sans", sans-serif;
   margin: 5px 0 10px;
   padding: 0 0 0 18px;
   list-style-type: disc;
@@ -1007,16 +993,30 @@ table {
   color: black;
 }
 #header {
-  background-color: #89bf04;
+  background-color: #242424;
   padding: 14px;
 }
 #header a#logo {
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
-  background: transparent url(../images/logo_small.png) no-repeat left center;
-  padding: 20px 0 20px 40px;
-  color: white;
+  width:100px;
+  height:25px;
+  display:inline-block;
+  vertical-align:middle;
+  background: url(../images/logo.png) no-repeat 50% 50%;
+  background-size:contain;
+}
+#header a.logo-font{
+  font-size: 1.5em;
+  font-weight: bold;
+  text-decoration: none;
+  display:inline-block;
+  vertical-align:middle;
+  height:25px;
+  line-height:25px;
+  padding:0 10px;
+  color:#FFFFFF;
 }
 #header form#api_selector {
   display: block;
@@ -1042,16 +1042,10 @@ table {
   padding: 6px 8px;
   font-size: 0.9em;
   color: white;
-  background-color: #547f00;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
+  background-color: #79CDC0;
 }
 #header form#api_selector .input a#explore:hover {
-  background-color: #547f00;
+  background-color: #5daba1;
 }
 #header form#api_selector .input input {
   font-size: 0.9em;
